kingsapp list limit changes to 50 border above table horizontal scroll in formb uilder fixed

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,9 @@
 }
 .custom-pagination{
     padding-left: 0;
-    margin: 10px 0;
+    margin: 10px 0 0 0;
+    border-bottom: solid 2px #ccc;
+    padding-bottom: 10px;
 }
 .custom-pagination h4{
     margin: 12px 0 0 0;
@@ -177,11 +179,11 @@
   padding: 10px 15px;
 }
 .form-builder-wrap{
-    border-top: solid 2px #eee; 
-    border-bottom: solid 2px #eee; 
+    border-top: solid 2px #ccc; 
+    border-bottom: solid 2px #ccc; 
     padding-top:15px;
     padding-bottom:15px;
-    margin-top:10px;
+    margin-top:8px;
 }
 .form-builder-wrap .btn-group{
   box-shadow:none;
@@ -205,4 +207,7 @@
 .table tbody tr{
   background-color: #fcfcfc;
 }
-
+.form-horizontal .form-group{
+    margin-right: 0;
+    margin-left: 0;
+}
